--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
