--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-wamp": "^2.1.0",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-chat-scroll": "^1.3.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
