--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@babel/polyfill": "^7.4.4",
     "autobahn": "^19.9.2",
     "core-js": "^2.6.5",
+    "jsencrypt": "^3.0.0-rc.1",
     "vue": "^2.6.10",
+    "vue-chat-scroll": "^1.3.5",
     "vue-router": "^3.0.3",
     "vue-the-mask": "^0.11.1",
     "vue-wamp": "^2.1.0",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1",
-    "vue-chat-scroll": "^1.3.5"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
